src/test/ui/parser/issues/issue-14303-enum.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-enum.rs:1:15
   |
LL | enum X<'a, T, 'b> {
   |       --------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, 'b, T>`

error: aborting due to previous error

